--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>Rohim <span></span></h1>
-        <a href="#projects" data-after="Contact" type="button" class="cta">Contact US</a>
+        <a href="https://t.me/Rohim_official" type="button" class="cta">Contact US</a>
       </div>
     </div>
   </section>
